--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -21,7 +21,7 @@
     </div>
     <div class="row justify-content-center pb-5">
       <div class="col-10 col-sm-9 col-md-8 col-lg-5">
-        <%= link_to 'QR code', quiz_qr_path(Quiz.find_by(playable: true)), class: 'btn btn-primary btn-lg btn-block mb-4' %>
+        <%= link_to 'QR code', qr_path, class: 'btn btn-primary btn-lg btn-block mb-4' %>
 
         <%= link_to 'Commencer la partie', new_player_registration_path(quiz: Quiz.find_by(playable: true)), class: 'btn btn-primary btn-lg btn-light btn-block mb-4' %>
 
