--- a/app/views/quizzes/qr.html.erb
+++ b/app/views/quizzes/qr.html.erb
@@ -1,6 +1,9 @@
 <div class="main d-none d-md-block">
-  <div class="d-flex justify-content-center">
-    <h1 class="text-white mt-5 mb-4 pursuit-title">CinePursuit</h1>
+  <div class="d-flex justify-content-center align-items-center">
+    <h1 class="text-white mt-5 mb-4 pursuit-title mr-3">CinePursuit</h1>
+    <div class="d-flex justify-content-center align-items-center bg-white ml-3 px-3 py-2">
+      <%= image_tag 'logo-slec.png', height: "100" %>
+    </div>
   </div>
   <div class="mt-5" id="qr_code">
     <div class="qr-instructions">
@@ -10,6 +13,7 @@
       <!-- <h2 class="text-white mb-5">A gagner : <%#= @quiz.reward %> 😎</h2> -->
       <h3 class="text-white mb-4">Scannez ce <code>QR-Code</code> pour jouer.</h3>
       <%= image_tag 'hand.jpg', height: '100%', class: 'qr-instructions-img' %>
+      <h3 class="text-white mt-4">Ou bien connectez-vous sur <code>bit.ly/quizlyon</code></h3>
     </div>
     <div class="qr_square">
       <%= @qr_code.as_svg.html_safe %>
@@ -30,6 +34,7 @@
         <%= @qr_code.as_svg(module_size: 2).html_safe %>
       </div>
     </div>
+    <p class="text-white mt-3">Ou bien connectez-vous sur <code>bit.ly/quizlyon</code></p>
     <div class="mt-5">
       <%= link_to root_path do %>
         <i class="fas fa-backward"></i>
